feat(indexing): Zulässige Dokumenttypen über den erkannten Inhalt statt über die Dateiendung bestimmen
Die Zulassungsprüfung entscheidet jetzt anhand des per Tika erkannten Medientyps, auf allen drei
dateibasierten Aufnahmewegen gleich (Verzeichnis, Webverzeichnis, RSS-Anlagen) - die Dateiendung ist
nur noch ein Hinweis, dessen Abweichung als FORMAT_MISMATCH-Ereignis protokolliert, aber nicht mehr
zur Ablehnung genutzt wird. Der Upload-Weg (#435) bleibt bewusst strenger: dort bleibt eine
Abweichung ein Ablehnungsgrund, weil Datei und Name in derselben Handlung gewählt wurden.

Für eindeutig erkennbare Typen (PDF, DOC, DOCX, PPTX) entscheidet der Inhalt allein. Für
Textformate (MD/TXT), die Tika inhaltlich nicht unterscheiden kann, bleibt die Endung die
Disambiguierung - sonst würde jede lesbare Textdatei (CSV, Quellcode, Log) unbeabsichtigt in den
zugelassenen Bestand aufgenommen.

SupportedDocumentFormats ist die einzige Stelle, die diese Entscheidung trifft; DocumentService
(Dateisystem), UrlIndexingExecutor (Webverzeichnis) und RssFeedIndexingExecutor (Anlagen) rufen
dieselbe Methode auf.

Closes #404

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Jks7dtNAi9DK69tzcywKSq